# x-monitor

./: .clang-format  .gitignore  .gitmodules  .golangci.yml  CMakeLists.txt  Readme.md  config.h  config.h.in  go.mod  go.sum  main.c  pack.sh  routine.h
app_config/: app_config.c  app_config.h
app_register/: exporter_register.c  exporter_register.h
appconfig/: appconfig.c
cli/: log.cfg
cli/arl_test/: arl_test.c
cli/config_test/: CMakeLists.txt  config_test.c  db_info_1.txt
cli/construct_init/: CMakeLists.txt
cli/ebpf/bootstrap_cli/: CMakeLists.txt  bootstrap_cli.c
cli/ebpf/cachestat_cli/: CMakeLists.txt  main.c
cli/ebpf/deny_ptrace_cli/: CMakeLists.txt  main.c
cli/ebpf/readbtf_cli/: CMakeLists.txt  Readme.md  main.c
cli/ebpf/xdp_libbpf_test/: CMakeLists.txt  main.c
cli/go_clis/: go.mod
cli/mempool_test/: CMakeLists.txt  mempool_test.c
cli/overload_macro/: main.c
cli/process_stat_test/: process_stat_test.c
cli/procfile_cli/: procfile_cli.c  write_file.sh
cli/prom_client_test/: CMakeLists.txt  test.c
cli/prom_reg_test/: CMakeLists.txt  test.c
cli/proto_statistics_cli/: main.c
cli/pstree/: Makefile  pstree.c
cli/readbft/: main.c
cli/regex_cli/: CMakeLists.txt  regex_cli.c
cli/simplepattern_test/: main.c
cli/thread_cancel/: main.c
collectors/application/: app_metrics.c  app_metrics.h  apps_filter_rule.c  apps_filter_rule.h  apps_status.c  apps_status.h  plugin_apps.c  plugin_apps.h
collectors/diskspace/: plugin_diskspace.c  plugin_diskspace.h
collectors/ebpf/: bpf_and_user.h
collectors/proc/: plugin_proc.c  plugin_proc.h  proc_cgroups.c  proc_diskstats.c  proc_loadavg.c  proc_meminfo.c  proc_net_dev.c  proc_net_netstat.c  proc_net_snmp.c  proc_net_sockstat.c  proc_net_stat_conntrack.c  proc_pressure.c  proc_rdset.c  proc_rdset.h  proc_schedstat.c  proc_stat.c  proc_vmstat.c
collectors/proc_sock/: CMakeLists.txt  proc_sock.c  proc_sock.h  sock_info.h
collectors/proc_sock_diag/: CMakeLists.txt  common_def.h  proc_sock_diag.c  proc_sock_diag.h  proc_tcp_diag.c  proc_udp_diag.c  proc_unix_diag.c
collectors/process/: CMakeLists.txt  process_cpu.c  process_fd.c  process_io.c  process_mem.c  process_oom.c  process_status.c  process_status.h
doc/: CGroup指标查询.md  CGroup监控.md  CPU观察.md  EBPF-Profile.md  EBPF指标查询.md  EBpf过滤Socket.md  OS和eBPF工作计划.pptx  PageCache管理.md  XFS文件系统分析.md  cachestat.md  cgroup的内存资源控制器.md  eBPF CPU观察.md  eBPF MAP的使用.md  eBPF Program类型.md  eBPF Section类型.md  eBPF内核观察.md  eBPF技术实践.pptx  eBPF观察.xmind  eBPF观察进程虚拟地址空间的分配.md  ebpf技术探索、实践.pptx  gantt_project_template.xltx  linux内核抢占（preempt）.md  objdump help.md  objdump manual.md  smaps.md  x-monitor.eBPF Observe & Profiling.pptx  使用userspace_rcu.md  内核调试.md  基于eBPF可观测性实践.pptx  对接Prometheus.md  应用指标查询.md  应用监控.md  应用监控、指标查询.md  指标查询.md  系统参数说明.md  系统指标查询.md  系统监控.md  系统监控、指标查询.md  编译、运行.md  调试内核crash.md  (+1 more)
doc/img/: debug-kernel.img  ebpf-with_fp  eh_frame_unwind  frame_point  veth
env/config/: db_filter_resources.txt  ebpf-log.conf  ebpf.cfg  x-monitor-log.cfg  x-monitor.cfg
env/plugins.d/: timer.plugin
examples/arl_test/: CMakeLists.txt  arl_test.c  log.cfg
examples/config_test/: CMakeLists.txt  config_test.c  db_info_2.txt
examples/construct_init/: main.c
examples/ebpf/bootstrap_cli/: CMakeLists.txt  bootstrap_cli.c
examples/ebpf/cachestat_top_cli/: CMakeLists.txt  main.c
examples/ebpf/deny_ptrace_cli/: CMakeLists.txt  main.c
examples/ebpf/perf_event_stack_cli/: CMakeLists.txt  main.c  readme.md
examples/ebpf/trace_syscalls_cli/: CMakeLists.txt  trace_syscalls_cli.c
examples/execve_test/: CMakeLists.txt  main.c
examples/go_clis/: Makefile
examples/kernel_dev/: .clang-format  common.mk  misc.h
examples/make/: Makefile
examples/mempool_test/: mempool_test.c
examples/pdpids_test/: CMakeLists.txt  descendant_pids_test.c
examples/proc_sock_test/: CMakeLists.txt  proc_sock_test.c
examples/process_stat_test/: CMakeLists.txt  process_stat_test.c
examples/procfile_cli/: CMakeLists.txt  procfile_cli.c
examples/prom_client_test/: test.c
examples/proto_statistics_cli/: CMakeLists.txt
examples/read_smaps/: CMakeLists.txt  dbus.smaps  read_smaps.c
examples/readbft/: CMakeLists.txt
examples/regex_cli/: regex_cli.c  test.sh
examples/simplepattern_test/: CMakeLists.txt  main.c
examples/thread_cancel/: CMakeLists.txt
examples/thread_cleanup/: CMakeLists.txt  main.c
examples/vm_test/: CMakeLists.txt  main.c
examples/vmalloc_process/: CMakeLists.txt  main.c
examples/vmm_test/: CMakeLists.txt  main.c
grafana/: ebpf-143.json  ebpf-1689757046221.json  ebpf.json  ebpf_azure_159.json  ebpf_azure_163.json
plugin_cgroups/: cgroup_metrics.c  cgroup_metrics.h  cgroups_collector.c  cgroups_collector.h  cgroups_def.h  cgroups_ds.h  cgroups_metrics.c  cgroups_metrics.h  cgroups_mgr.c  cgroups_mgr.h  cgroups_routine.c  cgroups_routine.h  cgroups_subsys_blkio.c  cgroups_subsys_cpu.c  cgroups_subsys_cpuacct.c  cgroups_subsys_memory.c  cgroups_subsystem.h  cgroups_utils.c  cgroups_utils.h  plugin_cgroups.c  plugin_cgroups.h
plugin_ebpf/: Readme.md  bpf_and_user.h
plugin_ebpf/bpf/: Makefile  xm_bio.bpf.c  xm_biolat.bpf.c  xm_bootstrap.bpf.c  xm_bootstrap.h  xm_bpf_common.h  xm_bpf_helpers_common.h  xm_bpf_helpers_filter.h  xm_bpf_helpers_hard.h  xm_bpf_helpers_maps.h  xm_bpf_helpers_math.h  (+28 more)
plugin_perf/: perf.plugin.md
plugin_proxy/: envoy_mgr.c  envoy_mgr.h
plugins.d/: plugins_d.c  plugins_d.h
utils/: CMakeLists.txt  adaptive_resortable_list.c  adaptive_resortable_list.h  atomic.h  backoff_algorithm.c  backoff_algorithm.h  base64.c  base64.h  clocks.c  clocks.h  cmoball.h  common.h  compiler.h  consts.c  consts.h  daemon.c  daemon.h  debug.c  debug.h  files.c  files.h  hashtable.h  http_client.c  http_client.h  hweight.c  hweight.h  list.h  log.c  log.h  md5.c  md5.h  mempool.c  mempool.h  mountinfo.c  mountinfo.h  numbers.c  numbers.h  os.c  os.h  popen.c  (+15 more)
utils/hash/: xxhash.h
utils/json/: s2j.c  s2jdef.h
utils/ringbuf/: ringbuf.c  ringbuf.h  t_ringbuf.c  t_stress.c  utils.h
utils/sds/: sds.c  sds.h  testhelp.h
(+357 files in other folders)
